sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value plusGrandQue
    while(j>0 && !plusGrandQue(j-1, v)){
                  ^